Use CI_PROJECT_ID instead of hardcoded project id

--- a/pom.xml
+++ b/pom.xml
@@ -14,17 +14,17 @@
   <repositories>
     <repository>
       <id>gitlab-maven</id>
-      <url>https://gitlab.com/api/v4/projects/3467553/packages/maven</url>
+      <url>https://gitlab.com/api/v4/projects/${env.CI_PROJECT_ID}/packages/maven</url>
     </repository>
   </repositories>
   <distributionManagement>
     <repository>
       <id>gitlab-maven</id>
-      <url>https://gitlab.com/api/v4/projects/3467553/packages/maven</url>
+      <url>https://gitlab.com/api/v4/projects/${env.CI_PROJECT_ID}/packages/maven</url>
     </repository>
     <snapshotRepository>
       <id>gitlab-maven</id>
-      <url>https://gitlab.com/api/v4/projects/3467553/packages/maven</url>
+      <url>https://gitlab.com/api/v4/projects/${env.CI_PROJECT_ID}/packages/maven</url>
     </snapshotRepository>
   </distributionManagement>
   <dependencies>
