--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,3 +19,11 @@ test:
     stage: test
     script:
         - mvn test
+        
+
+deploy:
+  stage: deploy
+  script:
+    - mvn deploy
+  only:
+    - master
