--- a/pom.xml
+++ b/pom.xml
@@ -14,17 +14,19 @@
   <repositories>
     <repository>
       <id>gitlab-maven</id>
-      <url>https://gitlab.com/api/v4/projects/3467553/packages/maven</url>
+      <url>>http://localhost:8081/artifactory/libs-release-local</url>
     </repository>
   </repositories>
   <distributionManagement>
     <repository>
-      <id>gitlab-maven</id>
-      <url>https://gitlab.com/api/v4/projects/3467553/packages/maven</url>
+        <id>central</id>
+        <name>Demo-dep</name>
+        <url>http://localhost:8081/artifactory/libs-release-local</url>
     </repository>
     <snapshotRepository>
-      <id>gitlab-maven</id>
-      <url>https://gitlab.com/api/v4/projects/3467553/packages/maven</url>
+        <id>snapshots</id>
+        <name>Demo-depsnap</name>
+        <url>http://localhost:8081/artifactory/libs-snapshot-local</url>
     </snapshotRepository>
   </distributionManagement>
   <dependencies>
