--- a/pom.xml
+++ b/pom.xml
@@ -11,25 +11,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-  <repositories>
-    <repository>
-      <id>gitlab-maven</id>
-      <url>>http://10.72.80.82:8081/artifactory/libs-release-local</url>
-    </repository>
-  </repositories>
-  <distributionManagement>
-    <repository>
-        <id>gitlab-maven</id>
-        <name>Demo-dep</name>
-        <url>http://10.72.80.82:8081/artifactory/libs-release-local</url>
-    </repository>
-    <snapshotRepository>
-        <id>gitlab-maven</id>
-        <name>Demo-depsnap</name>
-        <url>http://10.72.80.82:8081/artifactory/libs-snapshot-local</url>
-    </snapshotRepository>
-  </distributionManagement>
-  <dependencies>
+ <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -37,4 +19,11 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>ip-172-31-40-229.ap-south-1.compute.internal-releases</name>
+        <url>http://13.233.51.12:8081/artifactory/libs-release-local</url>
+    </repository>
+</distributionManagement>
 </project>
