--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,29 +1,27 @@
 image: maven:latest
 
 variables:
-  MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version"
+  MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
 
 cache:
   paths:
     - .m2/repository/
-    
-
+    - target/
 
 build:
   stage: build
   script:
-    - mvn package
-    
+    - mvn $MAVEN_CLI_OPTS compile
+
 test:
-    stage: test
-    script:
-        - mvn test
-        
+  stage: test
+  script:
+    - mvn $MAVEN_CLI_OPTS test
 
 deploy:
   stage: deploy
   script:
-    - mvn deploy
+    - mvn $MAVEN_CLI_OPTS deploy
   only:
     - master
