--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ cache:
 build-app:
   stage: build
   script: 
-    - mvn $MAVEN_CLI_OPTS build -s ci_settings.xml
+    - mvn $MAVEN_CLI_OPTS compile -s ci_settings.xml
     
 test-app:
   stage: test
