--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ stages:
     - test
     - deploy
 
-build:
+.build:
     stage: build
     script:
         - mvn $MAVEN_CLI_OPTS compile
@@ -23,3 +23,14 @@ build:
     artifacts:
         paths:
             - artifact_folder/*
+            
+test:
+    stage: test
+    script:
+        - echo "test"
+
+test@:
+    image: maven:3.6.3
+    stage: test
+    script:
+        - echo "test"
