--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,8 @@ build:
     script:
         - mvn $MAVEN_CLI_OPTS compile
     only:
-        - branches: abc
+        refs: 
+            - branches: abc
     artifacts:
         paths:
             - artifact_folder/*
