--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,13 +16,10 @@ stages:
 
 build:
     stage: build
-    before_script:
-        - apt-get install zip
-
     script:
-        ##- mvn $MAVEN_CLI_OPTS compile
-        - echo $CI_PROJECT_DIR
-        - zip -r simple-mven-dep.zip $CI_PROJECT_DIR
+        - mvn $MAVEN_CLI_OPTS compile
+        ##- echo $CI_PROJECT_DIR
+        ##- zip -r simple-mven-dep.zip $CI_PROJECT_DIR
     only:
         refs: 
             - zip_folder
