--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,9 +23,9 @@ build:
     only:
         refs: 
             - zip_folder
-    ##artifacts:
-        ##paths:
-            ##- artifact_folder/*
+    artifacts:
+        paths:
+            - artifact_folder/*
 
 .test:
     image: maven:3.6.3
