--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build:
     stage: build
     before_script:
         ##- yum update
-        - apt install zip
+        - apt-get install zip
     script:
         ##- mvn $MAVEN_CLI_OPTS compile
         - echo "hello:"
