--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,14 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.zeroturnaround</groupId>
+        <artifactId>zt-zip</artifactId>
+        <version>1.14</version>
+</dependency>
   </dependencies>
+
+
   <distributionManagement>
     <repository>
         <id>central</id>
