--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,16 @@
-image: alpine:latest
+image: maven:latest
 
 stages:
     - build
 
 build:
     stage: build
-    before_script:
-        - apk update
-        - apk add zip
+    ##before_script:
+        ##- apk update
+        ##- apk add zip
     script:
         - echo "hello:"
+        - mvn clean install
         ##- ls -lrt
         - zip -r simple-mvn.zip $CI_PROJECT_DIR/*
         ##- ls -lrt
