--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,18 @@
-image: maven:latest
+image: alpine:latest
 
 stages:
     - build
 
 build:
     stage: build
-    ##before_script:
-        ##- apk update
-        ##- apk add zip
+    before_script:
+        - apk update
+        - apk add zip
     script:
         - echo "hello:"
-        - mvn clean install
-        ##- ls -lrt
+        - ls -lrt
         - zip -r simple-mvn.zip $CI_PROJECT_DIR/*
-        ##- ls -lrt
+        - ls -lrt
     artifacts:
         paths:
             - simple-mvn.zip
