--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ build-app:
 check-branch:
   stage: check
   script:
-    - if [ $CI_COMMIT_REF_NAME != "master" ]; then echo "deploy to PROD" ; else if [ $CI_COMMIT_REF_NAME != "develop" ]; then echo "deploy to DEV"
+    - if [ $CI_COMMIT_REF_NAME != "master" ]; then echo "deploy to PROD" ; else if [ $CI_COMMIT_REF_NAME != "develop" ]; then echo "deploy to DEV" ; fi  
 
 test-app:
   stage: test
