--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ build-app:
 check-branch:
   stage: check
   script:
-    - if [ $CI_COMMIT_REF_NAME != "master" ]; then echo "push master" fi 
+    - if [ $CI_COMMIT_REF_NAME != "master" ]; then echo "push master" ; elif [ $CI_COMMIT_REF_NAME != "develop" ]; then echo "push develop"; fi   
 
 test-app:
   stage: test
