--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,9 +47,7 @@ build-app:
 check-branch:
   stage: check
   script:
-    - if [ $CI_COMMIT_REF_NAME != "master" ]; then echo "push master" ; elif [ $CI_COMMIT_REF_NAME != "develop" ]; then echo "push develop"; fi   
-    - if [ $CI_COMMIT_REF_NAME != "master" ]; then echo "push master" ; elif [ $CI_COMMIT_REF_NAME != "develop" ]; then echo "push develop"; elif [ $CI_COMMIT_REF_NAME != "release" ]; then echo "push release"; fi 
-
+    - if [ $CI_COMMIT_REF_NAME = "master" ]; then echo "push master" ; elif [ $CI_COMMIT_REF_NAME = "develop" ]; then echo "push develop"; elif [ $CI_COMMIT_REF_NAME = "release" ]; then echo "push release"; fi 
 
 test-app:
   stage: test
