--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,10 +24,10 @@ variables:
 image: maven:3.3.9-jdk-8
 
 stages:  
-  - check
   - build  
   - test  
-  - quality
+    #- quality
+  - check
 
 # Cache downloaded dependencies and plugins between builds.
 # To keep cache across branches add 'key: "$CI_JOB_NAME"'
@@ -49,10 +49,10 @@ test-app:
   script: 
     - mvn $MAVEN_CLI_OPTS test -s ci_settings.xml
     
-quality_app:
-  stage: quality
-  script:
-    - mvn $MAVEN_CLI_OPTS sonar:sonar -s ci_settings.xml  -Dsonar.host.url=$SONAR_URL  -Dsonar.login=$SONAR_TOKEN -Dsonar.projectKey=$SONAR_PROJECT_KEY 
+      #quality_app:
+      #stage: quality
+      #script:
+      #- mvn $MAVEN_CLI_OPTS sonar:sonar -s ci_settings.xml  -Dsonar.host.url=$SONAR_URL  -Dsonar.login=$SONAR_TOKEN -Dsonar.projectKey=$SONAR_PROJECT_KEY 
 
 check-branch:
   stage: check
