--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,9 +62,9 @@ check-branch:
         echo "Deploy to PROD" ;
       elif [ $CI_COMMIT_REF_NAME = "develop" ]; then
         echo "Deploy to DEV";
-      elif [ $CI_COMMIT_REF_NAME = "release" ]; then
+      elif [[ "$CI_COMMIT_REF_NAME" == release* ]]; then
         echo "Deploy to INT";
-      elif [ $CI_COMMIT_REF_NAME == "feature"* ]; then
+      elif [[ "$CI_COMMIT_REF_NAME" == feature* ]]; then
         echo "END";
       fi
 
