--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ check-branch:
   stage: check
   script:
     - 
-    - if [ $CI_COMMIT_REF_NAME = "master" ]; then ENV_VAR="dev"; echo "Deploy to PROD" ;
+    - if [ $CI_COMMIT_REF_NAME = "master" ]; then echo "Deploy to PROD";
       elif [ $CI_COMMIT_REF_NAME = "develop" ]; then echo "Deploy to DEV";
       elif [[ "$CI_COMMIT_REF_NAME" == release* ]]; then echo "Deploy to INT";
       elif [[ "$CI_COMMIT_REF_NAME" == feature* ]]; then echo "END";
@@ -70,8 +70,6 @@ check-branch:
 get-prop-env:
   stage: upload
   script:
-    - $ENV_VAR="fffff"
-    - echo $ENV_VAR
     - "wget --header='PRIVATE-TOKEN: jSTXA-CUBmaxA8sh3vdL' 'https://gitlab.com/api/v4/projects/18015300/repository/files/prop-conf-dev.yml/raw?ref=master' -O prop-conf-dev.yml"
     - cat prop-conf-dev.yml
 
