--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,11 +60,12 @@ test-app:
 check-branch:
   stage: check
   script:
-    - if [ $CI_COMMIT_REF_NAME = "master" ]; then echo "Deploy to PROD";
+    - if [ $CI_COMMIT_REF_NAME = "master" ]; then SONAR_URL="dddddddddddddddd";
       elif [ $CI_COMMIT_REF_NAME = "develop" ]; then echo "Deploy to DEV";
       elif [[ "$CI_COMMIT_REF_NAME" == release* ]]; then echo "Deploy to INT";
       elif [[ "$CI_COMMIT_REF_NAME" == feature* ]]; then echo "END";
       fi
+    - echo $SONAR_URL
 
 get-prop-env:
   stage: upload
