--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,8 @@ check-branch:
 get-prop-env:
   stage: upload
   script:
-    - "wget --header='PRIVATE-TOKEN: jSTXA-CUBmaxA8sh3vdL' 'https://gitlab.com/api/v4/projects/18015300/repository/files/prop-conf-$ENV_DEPLOY.yml/raw?ref=master' -O prop-conf-$ENV_DEPLOY.yml"
+    - echo "chaine1"${ENV_DEPLOY}"chaine2" 
+    - "wget --header='PRIVATE-TOKEN: jSTXA-CUBmaxA8sh3vdL' 'https://gitlab.com/api/v4/projects/18015300/repository/files/prop-conf-${ENV_DEPLOY}.yml/raw?ref=master' -O prop-conf-${ENV_DEPLOY}.yml"
     - cat prop-conf-dev.yml
 
 deploy-to-integration:  
