Count number of files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,21 +5,8 @@ stages:
 
 build:
     stage: build
-    before_script:
-        - apk update
-        - apk add zip
     script:
         - echo "hello:"
         - ls -lrt
-        - zip -r simple-mvn.zip $CI_PROJECT_DIR/*
-        - ls -lrt
-    artifacts:
-        paths:
-            - simple-mvn.zip
-            - README.md
-
-.test:
-    image: maven:3.6.3
-    stage: test
-    script:
-        - echo "test"
+        - ls -l | wc -l
+        - ls -l | grep -v ^l | wc -l
