--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,4 +10,4 @@ build:
         - ls -lrt ##list all directory
         - ls -l | wc -l ##list number of files
         - ls -l | grep -v ^l | wc -l ##list number of files
-        - ls -jil | wc -l ##list number of files in jil folder
+        - ls jil | wc -l ##list number of files in jil folder
