--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,3 +11,7 @@ build:
         - ls -l | wc -l ##list number of files
         - ls -l | grep -v ^l | wc -l ##list number of files
         - ls jil/dev | wc -l ##list number of files in jil folder
+        - find jil/dev -name "*.jil" | wc -l
+        - find jil/dev -name "*.md" | wc -l
+        - find jil/qa -name "*.jil" | wc -l
+        - find jil/prod -name "*.sh" | wc -l
