--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,14 +18,14 @@ build:
         - FILES=$(find jil/dev -name "*.jil" | wc -l) ##storing the values in variable 
         - echo "There are $FILES in dev env." 
         - |
-            if [ $FILES == 2 ]
+            if [ $FILES == 3 ]
             then
                 echo "Sunday is the holiday"
             else
                 echo "wrong cmd"
             fi
-        - |
-            for dirname in $(i -eq 0; i < $FILES; ++i)
-            do
-                echo "$dirname"
-            done
+        ##- |
+            ##for dirname in $(i -eq 0; i < $FILES; ++i)
+            ##do
+                ##echo "$dirname"
+            ##done
