--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ build:
             for dirname in $(ls -d jil/dev/*)
             do
                 echo "$dirname"
-                if [ -f "$dirname" ]
+                if cmp -s "$dirname" "sample1.jil";
                 then
                     echo "file found"
                 else 
