--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,11 +12,12 @@ build:
         - ls -l | grep -v ^l | wc -l ##list number of files
         - ls jil/dev | wc -l ##list number of files in jil folder
         - find jil/dev -name "*.jil" | wc -l ##finding number of files with specific extension 
-        - find jil/dev -name "*.jil" 
+        - FILE1=$(find jil/dev -name "*.jil")
         - find jil/qa -name "*.jil" | wc -l
         - find jil/prod -name "*.sh" | wc -l
         - FILES=$(find jil/dev -name "*.jil" | wc -l) ##storing the values in variable 
         - echo "There are $FILES in dev env." 
+        - echo "$FILE1"
         - |
             if [ $FILES == 3 ]
             then
@@ -29,6 +30,7 @@ build:
             for dirname in $(ls -d jil/dev/*)
             do
                 echo "$dirname"
+                echo "$abc"
                 if cmp -s "$dirname" "$abc";
                 then
                     echo "file found"
