--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,14 +10,14 @@ build:
         - ls -lrt ##list all directory
         - ls -l | wc -l ##list number of files
         - ls -l | grep -v ^l | wc -l ##list number of files
+        - ls jil/dev | grep -v / ##list all files in the directory
         - ls jil/dev | wc -l ##list number of files in jil folder
         - find jil/dev -name "*.jil" | wc -l ##finding number of files with specific extension 
-        - FILE1=$(find jil/dev -name "*.jil")
+        - find jil/dev -name "*.jil"
         - find jil/qa -name "*.jil" | wc -l
         - find jil/prod -name "*.sh" | wc -l
         - FILES=$(find jil/dev -name "*.jil" | wc -l) ##storing the values in variable 
         - echo "There are $FILES in dev env." 
-        - echo "$FILE1"
         - |
             if [ $FILES == 3 ]
             then
@@ -25,13 +25,20 @@ build:
             else
                 echo "wrong cmd"
             fi
-        - |
+            a="a"
+            b="b"
+            if [ $a == $b ]
+            then
+                echo "Sunday is the holiday"
+            else
+                echo "wrong cmd"
+            fi
+        - | 
             abc="sample1.jil"
             for dirname in $(ls -d jil/dev/*)
             do
                 echo "$dirname"
-                echo "$abc"
-                if cmp -s "$dirname" "$abc";
+                if cmp -s "$dirname" "jil/dev/$abc";
                 then
                     echo "file found"
                 else 
