changes in for loop

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,20 +25,12 @@ build:
             else
                 echo "wrong cmd"
             fi
-            a="a"
-            b="b"
-            if [ $a == $b ]
-            then
-                echo "Sunday is the holiday"
-            else
-                echo "wrong cmd"
-            fi
         - | 
             abc="sample1.jil"
-            for dirname in $(ls -d jil/dev/*)
+            for dirname in $(ls jil/dev | grep -v /) ##$(ls -d jil/dev/*) 
             do
                 echo "$dirname"
-                if cmp -s "$dirname" "jil/dev/$abc";
+                if cmp -s "$dirname" "$abc" ##"jil/dev/$abc"; ##comparing files
                 then
                     echo "file found"
                 else 
