--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ build:
             for dirname in $(ls jil/dev | grep -v /) ##$(ls -d jil/dev/*) 
             do
                 echo "$dirname"
-                if cmp -s "$dirname" "$abc" ##"jil/dev/$abc"; ##comparing files
+                if cmp -s "$dirname" "jil/dev/$abc"; ##comparing files
                 then
                     echo "file found"
                 else 
