--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,15 +3,19 @@ image: alpine:latest
 stages:
     - build
 
+cache:
+    paths:
+        - artifact_folder/
+
 build:
     stage: build
     script:
         - echo "hello:"
         - ls -lrt ##list all directory
         - ls -l | wc -l ##list number of files
-        - ls -l | grep -v ^l | wc -l ##list number of files
-        - ls jil/dev | grep -v / ##list all files in the directory
         - ls jil/dev | wc -l ##list number of files in jil folder
+        - ls jil/dev ##list all files in the directory
+        - ls -Art | tail -n 1 ##find the latest file in particular directory
         - find jil/dev -name "*.jil" | wc -l ##finding number of files with specific extension 
         - find jil/dev -name "*.jil"
         - find jil/qa -name "*.jil" | wc -l
@@ -27,7 +31,7 @@ build:
             fi
         - | 
             abc="sample1.jil"
-            for dirname in $(ls -d jil/dev/*) 
+            for dirname in $(ls -d jil/dev/*)  ##for loop
             do
                 echo "$dirname"
                 if cmp -s "$dirname" "jil/dev/$abc"; ##comparing files
