--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
 image: alpine:latest
 
+variables:
+    DEV: "jil/dev"
+    
 stages:
     - build
 
@@ -13,7 +16,7 @@ build:
         - ls jil/dev ##list all files in the directory
         ##- ls jil/dev | head -n 1
         - ls -t1 |  head -n 1
-        - ls jil/dev | head -n 1
+        - ls $DEV | head -n 1
         - find jil/dev -name "*.jil" | wc -l ##finding number of files with specific extension 
         - find jil/dev -name "*.jil"
         - find jil/qa -name "*.jil" | wc -l
