--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,13 +7,11 @@ build:
     stage: build
     script:
         - echo "hello:"
-        - ls jil/dev | head -n 1
+        - ls jil/dev | head -n 1 ##latest files
         - ls -lrt ##list all directory
         - ls -l | wc -l ##list number of files
         - ls jil/dev | wc -l ##list number of files in jil folder
         - ls jil/dev ##list all files in the directory
-        ##- ls jil/dev | head -n 1
-        - ls -t1 |  head -n 1
         - find jil/dev -name "*.jil" | wc -l ##finding number of files with specific extension 
         - find jil/dev -name "*.jil"
         - find jil/qa -name "*.jil" | wc -l
