--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,3 +37,6 @@ build:
                     echo "file not found"
                 fi
             done
+        - find jil/prod/* -iname "*.jil" -atime -1
+        - find jil/prod/* -iname "*.jil" -atime -4
+        
