--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,3 +51,6 @@ build:
         - find jil/prod/* -maxdepth 1 -mtime -4
         ##- find jil/dev -type f -newermt 4/19/2020 ##does not work in the yml file becoz of newermt
         ##- find jil/dev -type f -newerat 4/19/2020 ##does not work in the yml file becoz of newerat
+        
+        - rm jil/dev/readme.md
+        - echo "removed successfully"
